--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
-  <title>Food + Beer Pairings</title>
+  <title>Food + BrewDog Pairings</title>
 </head>
 <body>
 <div class="container">
   <div class="row">
-    <div class="col-sm-6 offset-sm-3">
-      <h1>Food+Beer</h1>
+    <div class="col-sm-10 offset-sm-1">
+      <h1>Food+BrewDog Beer</h1>
 
       <p>Wondering what beer would go well with your meal?</p>
       <p>Just enter in what foods you're eating to find a recommended beer pairing.</p>    
@@ -28,8 +28,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-sm-6 offset-sm-3" id="output">
-      Output here
+    <div class="col-sm-10 offset-sm-1" id="output">
     </div>
   </div>
 </div>
